# TimTim

./: .gitignore  CMakeLists.txt
data/: curve.json  tux.json  tux.txt
data/maps/: test.json
src/: Camera.h  Game.cpp  Game.h  GameMap.h  Player.h  Sprite.h  main.cpp
src/core/: GameObject.cpp  GameObject.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  math.cpp  math.h
src/gui/: ColorPopup.h  ColorRampEditor.cpp  ColorRampEditor.h  ContextMenu.cpp  ContextMenu.h  CurveEditor.cpp  CurveEditor.h  gui.h
src/render/: particles.cpp  particles.h  sprite.cpp  sprite.h
tools/: LeshySpriteFormatter.py  particle_editor.cpp
